--- a/pom.xml
+++ b/pom.xml
@@ -32,14 +32,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<configuration>
-					<goal>install</goal>
-					<autoVersionSubmodules>true</autoVersionSubmodules>
-				</configuration>
-			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-release-plugin</artifactId>-->
+				<!--&lt;!&ndash;<version>2.5.1</version>&ndash;&gt;-->
+				<!--<configuration>-->
+					<!--<goal>install</goal>-->
+					<!--<autoVersionSubmodules>true</autoVersionSubmodules>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
