[maven-release-plugin] prepare for next development iteration

--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>hn-pet-clinic</artifactId>
         <groupId>nel.hardu</groupId>
-        <version>0.0.3</version>
+        <version>0.0.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>pet-clinic-web</artifactId>
