--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goal>install</goal>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
 				<version>2.5.1</version>
 				<dependencies>
 					<dependency>
