--- a/pom.xml
+++ b/pom.xml
@@ -48,14 +48,14 @@
 					<goal>install</goal>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
-				<version>2.5.1</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.shared</groupId>
-						<artifactId>maven-invoker</artifactId>
-						<version>2.2</version>
-					</dependency>
-				</dependencies>
+				<!--<version>2.5.1</version>-->
+				<!--<dependencies>-->
+					<!--<dependency>-->
+						<!--<groupId>org.apache.maven.shared</groupId>-->
+						<!--<artifactId>maven-invoker</artifactId>-->
+						<!--<version>2.2</version>-->
+					<!--</dependency>-->
+				<!--</dependencies>-->
 			</plugin>
 		</plugins>
 	</build>
